# tbpi

./: Cargo.toml
.github/workflows/: clippy-fmt.yml  release.yml
src/: main.rs
src/cmd/: join.rs  leave.rs  list.rs  mod.rs  play_pause.rs  queue.rs  skip.rs  stop.rs
