[package]
name = "tbpi"
description = "Test Bot Please Ignore"
version = "0.1.0"
edition = "2021"

[dependencies]
humantime = "2.0.1"
serenity = { version = "0.10", default-features = false, features = ["cache", "voice", "client", "gateway", "rustls_backend", "model", "unstable_discord_api", "collector"] }
songbird = { version = "0.2", features = ["builtin-queue", "yt-dlp"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
